--- a/index.html
+++ b/index.html
@@ -16,13 +16,141 @@
 
    <header>
 
+        <div>
+            <img src="img/logo/Booki.png" alt="logo booki">
+        </div>
+
+        <nav>
+            <ul>
+                <li><a href="#hebergement">Hébergements</a></li>
+                <li><a href="#activite">Activité</a></li>
+            </ul>
+        </nav>
+
    </header> 
 
    <section id="recherche">
+       <div>
+           <h1>Trouver votre hébergement pour des vacances de rêve</h1>
+           <p>En plein centre ville ou en pleine nature</p>
+       </div>
+
+       <div>
+           
+           <form action="#" method="post">
+               <p>
+
+               </p>
+
+               <input type="search" placeholder="Marseille, France">
+               <input type="submit" value="Rechercher">
+
+           </form>
+       </div>
+
+       <div>
+           <h2>Filtres</h2>
+           <div class="filtres">
+               <h3><span class="Maj">é</span>conomique</h3>
+               <p><i></i></p>
+           </div>
+           <div class="filtres">
+                <h3>Familial</h3>
+                <p><i></i></p>
+           </div>
+           <div class="filtres">
+                <h3>Romantique</h3>
+                <p><i></i></p>
+           </div>
+           <div class="filtres">
+                <h3>Animaux autorisés</h3>
+                <p><i></i></p>
+           </div> 
+       </div>
+
+       <div>
+           <p></p>
+           <p>Plus de 500 logements sont disponibles dans cette ville</p>
+       </div>
 
    </section>
 
    <section id="herbergement">
+       <article>
+            <h1>Hébergements à Marseille</h1>
+            <div class="container">
+                <div class="container-hebergement">
+                    <div class="hebergement-img">
+                        <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo hebergement lit superposé auberge La cannebière">
+                    </div>
+                    <h1>Auberge La Cannebière</h1>
+                    <p>Nuit à partir de <strong>25€</strong></p>
+                    <div class="etoiles">
+
+                    </div>
+                </div>
+
+                <div class="container-hebergement">
+                    <div class="hebergement-img">
+                        <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hebergement deux lit simple hôtel du port">
+                    </div>
+                    <h1>Hôtel du port</h1>
+                    <p>Nuit à partir de <strong>52€</strong></p>
+                    <div class="etoiles">
+
+                    </div>
+                </div>
+
+                <div class="container-hebergement">
+                    <div class="hebergement-img">
+                        <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo hebergement hôtel Les moutettes">
+                    </div>
+                    <h1>Hôtel Les moutettes</h1>
+                    <p>Nuit à partir de <strong>76€</strong></p>
+                    <div class="etoiles">
+
+                    </div>
+                </div>
+
+                <div class="container-hebergement">
+                    <div class="hebergement-img">
+                        <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hebergement lit deux places hôtel de la mer">
+                    </div>
+                    <h1>hôtel de la mer</h1>
+                    <p>Nuit à partir de <strong>46€</strong></p>
+                    <div class="etoiles">
+
+                    </div>
+                </div>
+
+                <div class="container-hebergement">
+                    <div class="hebergement-img">
+                        <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo hebergement lit superposé auberge Le Panier">
+                    </div>
+                    <h1>Auberge Le Panier</h1>
+                    <p>Nuit à partir de <strong>23€</strong></p>
+                    <div class="etoiles">
+
+                    </div>
+                </div>
+
+                <div class="container-hebergement">
+                    <div class="hebergement-img">
+                        <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo hebergement lit deux places">
+                    </div>
+                    <h1>Hôtel chez Amina</h1>
+                    <p>Nuit à partir de <strong>96€</strong></p>
+                    <div class="etoiles">
+
+                    </div>
+                </div>
+                
+            </div>
+       </article>
+
+       <article>
+
+       </article>
 
    </section>
    
@@ -33,6 +161,6 @@
    <footer>
 
    </footer>
-   
+
 </body>
 </html>
