ajout titre h2 article hébergement

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
 
                     </div>
                 </div>
+                <a href="#" id="more">
+                    <h2 class="more">Affichez plus</h2>
+                </a>
+                
                 
             </div>
        </article>
