création fichier css normalize et reset

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/1_header.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">    <link rel="stylesheet" href="css/1_header.css">
     <link rel="stylesheet" href="css/2_section_recherche.css">
     <link rel="stylesheet" href="css/3_section_hebergement.css">
     <link rel="stylesheet" href="css/4_section_activite.css">
@@ -86,8 +88,12 @@
                     <div class="hebergement_bloc_txt">
                         <h1>Auberge La Cannebière</h1>
                         <p>Nuit à partir de <strong>25€</strong></p>
-                        <div class="etoiles">
-    
+                        <div class="etoiles">                            
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>                             
                         </div>
                     </div>
                     
