Ajout du contenu activité

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">    <link rel="stylesheet" href="css/1_header.css">
     <link rel="stylesheet" href="css/2_section_recherche.css">
@@ -220,7 +219,51 @@
    </section>
    
    <section id="activite">
-
+        <h1>Activités à Marseille</h1>
+        <div class="container_activite">
+            <div class="activitelong">
+                <p>
+                    <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+                </p>
+                <h2>Vieux Port</h2>
+            </div>
+            <div class="deux_bloc">
+                <div class="activitemoyen">
+                    <p>
+                        <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                    </p>
+                    <h2>Fort de Pomègues</h2>
+                </div>
+                <div class="activitecourt">
+                    <p>
+                        <img src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+                    </p>
+                    <h2><span class="Maj">î</span>les du Frioul</h2>
+                </div>
+            </div>      
+                        
+            <div class="activitelong">
+                <p>
+                    <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+                </p>
+                <h2>Parc National des Calanques</h2>
+            </div>
+            <div class="deux_bloc">
+                <div class="activitecourt">
+                    <p>
+                        <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                    </p>
+                    <h2>Notre-Dame-de-la-Garde</h2>
+                </div>
+                <div class="activitemoyen">
+                    <p>
+                        <img src="img/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+                    </p>
+                    <h2>Parc Longchamp</h2>
+                </div>
+            </div>
+            
+        </div>
    </section>
 
    <footer>
