Ajout contenu footer

--- a/index.html
+++ b/index.html
@@ -266,8 +266,26 @@
         </div>
    </section>
 
-   <footer>
+   <footer id="footer">
+        <div class="footerdiv">
+            <h1>A propos</h1>
+            <ul class="footerul">
+                <li><a href="#footer">Fonctionnement du site</a></li>
+                <li><a href="#footer">Conditions générales de vente</a></li>
+                <li><a href="#footer">Données et confidentialité</a></li>
+            </ul>
+        </div>
+        <div class="footerdiv">
+            <h1>Nos hébergements</h1>
+            <li><a href="#footer">Charte qualité</a></li>
+            <li><a href="#footer">Soumettre votre hôtel</a></li>
 
+        </div>
+        <div class="footerdiv">
+            <h1>Assistance</h1>
+            <li><a href="#footer">Centre d'aide</a></li>
+            <li><a href="#footer">Nous contacter</a></li>
+        </div>
    </footer>
 
 </body>
