--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">    <link rel="stylesheet" href="css/1_header.css">
+    <script src="https://kit.fontawesome.com/d0ee6e80bb.js" crossorigin="anonymous"></script>    
+    <link rel="stylesheet" href="css/1_header.css">
     <link rel="stylesheet" href="css/2_section_recherche.css">
     <link rel="stylesheet" href="css/3_section_hebergement.css">
     <link rel="stylesheet" href="css/4_section_activite.css">
@@ -92,7 +93,8 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>                             
+                            <i class="fa-solid fa-star"></i>  
+                            <i class="fa-solid fa-user"></i>                           
                         </div>
                     </div>
                     
@@ -176,6 +178,11 @@
        </article>
 
        <article class="hebergement_article">
+
+            <div class="h1-populaire">
+                <h1>Les plus populaires</h1>
+                <p><i></i></p>
+            </div>
             <div class="container-populaire">
                 <div class="hebergement-img">
                     <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo hebergement lit deux places">
