ajout lien logo

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 <body>
 
    <header>
-
-        <div>
-            <img src="img/logo/Booki.png" alt="logo booki">
-        </div>
+        <a href="#">
+            <div>
+                <img src="img/logo/Booki.png" alt="logo booki">
+            </div>
+        </a>
+        
 
         <nav>
             <ul>
