modification taille .info

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
    </section>
 
-   <!-- <section id="hebergement">
+   <section id="hebergement">
        <article class="hebergement_article">
             <h1>Hébergements à Marseille</h1>
             <div class="container">
@@ -314,7 +314,7 @@
             
        </article>
 
-   </section> -->
+   </section>
    
    <!-- <section id="activite">
         <h1>Activités à Marseille</h1>
