Modification class .hebergement_bloc_txt

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             <img src="img/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo hebergement lit deux places">
                         </div>
     
-                        <div class="hebergement_bloc_txt">
+                        <div class="hebergement_bloc_txt-populaire">
                             <div>
                                 <h1>Hôtel Le soleil du matin</h1>
                                 <p>Nuit à partir de <strong>128€</strong></p>
@@ -297,7 +297,7 @@
                             <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo hebergement lit deux places">
                         </div>
     
-                        <div class="hebergement_bloc_txt">
+                        <div class="hebergement_bloc_txt-populaire">
                             <div>
                                 <h1>Au coeur de l'eau Chambre d'hôtes</h1>
                                 <p>Nuit à partir de <strong>71€</strong></p>
@@ -319,7 +319,7 @@
                         <div class="populaire-img">
                             <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo hebergement lit deux places">
                         </div>
-                        <div class="hebergement_bloc_txt">
+                        <div class="hebergement_bloc_txt-populaire">
                             <div>
                                 <h1>Hôtel Tout bleu et Blanc</h1>
                                 <p>Nuit à partir de <strong>68€</strong></p>
