--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                <a href="#recherche">
                     <div class="filtres">
                         <h3>Animaux autorisés</h3>
-                        <i class="fa-solid fa-dog"></i>
+                        <p><i class="fa-solid fa-dog"></i></p>
                     </div> 
                 </a>
                
