--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star" style=" color: #f2f2f2"></i>                           
+                                <i class="fa-solid fa-star" grey></i>                           
                             </div>
                         </div>                        
                     </div>
@@ -204,8 +204,8 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star" style=" color: #f2f2f2"></i>
-                                <i class="fa-solid fa-star" style=" color: #f2f2f2"></i> 
+                                <i class="fa-solid fa-star" grey></i>
+                                <i class="fa-solid fa-star" grey></i> 
                             </div>
                         </div> 
                     </div>
@@ -229,7 +229,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star" style=" color: #f2f2f2"></i> 
+                                <i class="fa-solid fa-star" grey></i> 
                             </div>    
                         </div>                     
                     </div>
@@ -320,7 +320,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star" style=" color: #f2f2f2"></i> 
+                                <i class="fa-solid fa-star" grey></i> 
                             </div>
                         </div> 
                     </div>
@@ -343,7 +343,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star" style=" color: #f2f2f2"></i> 
+                                <i class="fa-solid fa-star" grey></i> 
                             </div>
                         </div>                
                     </div>
