Changement id en class 'hebergement'

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 
 <!-- Seconde section -->
 
-   <section id="hebergement">
+   <section class="hebergement">
 
-<!-- Premier Article -->
+<!-- Article -->
 
-       <article class="hebergement_article">
+       <article class="hebergement_article" id="hebergement">
 
             <h1>Hébergements à Marseille</h1>
 
@@ -268,7 +268,7 @@
             </div>
        </article>
 
-<!-- Second article -->
+<!-- Aside -->
 
        <aside class="hebergement_article">
 
