Ajout class activite

--- a/index.html
+++ b/index.html
@@ -353,9 +353,10 @@
         </aside>
 
    </section>
+
 <!-- Troisième Sections -->
 
-   <section id="activite">
+   <section id="activite" class="activite">
         <h1>Activités à Marseille</h1>
 
         <div class="container_activite">
@@ -397,7 +398,7 @@
                     </div>                    
 
                     <a href="#activite">
-                        <h2><span class="Maj">î</span>les du Frioul</h2>
+                        <h2> Îles du Frioul</h2>
                     </a>
                 </div>                                
             </div>                              
@@ -410,7 +411,7 @@
                     </picture>
                 </div>
                 
-                <a href="#activite" class="un_bloc">
+                <a href="#activite">
                     <h2>Parc National des Calanques</h2>
                 </a>
             </div>                       
@@ -424,7 +425,7 @@
                         </picture>
                     </div>
                     
-                    <a href="#activite"></a>
+                    <a href="#activite">
                         <h2>Notre-Dame-de-la-Garde</h2>
                     </a>
                 </div>                
