--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
 <!-- Footer -->
 
-   <!-- <footer id="footer">
+   <footer>
         <div class="footerdiv">
             <h1>A propos</h1>
             <ul class="footerul">
@@ -480,7 +480,7 @@
             </ul>
             
         </div>
-   </footer> -->
+   </footer>
 
 </body>
 </html>
