--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/d0ee6e80bb.js" crossorigin="anonymous"></script>    
@@ -350,8 +350,8 @@
                         </div>                
                     </div>
                 </a>
+            </div>
         </aside>
-
    </section>
 
 <!-- Troisième Sections -->
@@ -365,7 +365,7 @@
                 <div class="un_bloc">
                     <div class="long">
                         <picture>                        
-                            <source media="(max-width: 992px)" srcset="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"">                       
+                            <source media="(max-width: 992px)" srcset="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">                       
                             <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo activitée Vieux Port">
                         </picture>
                     </div>                
