Changement de logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <header>
                 <a href="#">
                     <div>
-                        <img src="img/logo/Booki.png" alt="logo booki">
+                        <img src="img/logo/Booki@3x.png" alt="logo booki">
                     </div>
                 </a>        
         
