changement de couleur

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star grey"></i>                           
+                                        <i class="fa-solid fa-star bleuclaire"></i>                           
                                     </div>
                                 </div>                        
                             </div>
@@ -186,7 +186,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star grey"></i> 
+                                        <i class="fa-solid fa-star bleuclaire"></i> 
                                     </div>
                                 </div>
                             </div>
@@ -209,8 +209,8 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star grey"></i>
-                                        <i class="fa-solid fa-star grey"></i> 
+                                        <i class="fa-solid fa-star bleuclaire"></i>
+                                        <i class="fa-solid fa-star bleuclaire"></i> 
                                     </div>
                                 </div> 
                             </div>
@@ -234,7 +234,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star grey"></i> 
+                                        <i class="fa-solid fa-star bleuclaire"></i> 
                                     </div>    
                                 </div>                     
                             </div>
@@ -325,7 +325,7 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star grey"></i> 
+                                    <i class="fa-solid fa-star bleuclaire"></i> 
                                 </div>
                             </div> 
                         </div>
@@ -348,7 +348,7 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star grey" ></i> 
+                                    <i class="fa-solid fa-star bleuclaire" ></i> 
                                 </div>
                             </div>                
                         </div>
