changement de nom fichier css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/d0ee6e80bb.js" crossorigin="anonymous"></script>    
-        <link rel="stylesheet" href="css/1_header.css">
+        <link rel="stylesheet" href="css/1_main.css">
         <link rel="stylesheet" href="css/2_section_recherche.css">
         <link rel="stylesheet" href="css/3_section_hebergement.css">
         <link rel="stylesheet" href="css/4_section_activite.css">
