Modification comportement loupe

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                         <input type="search" placeholder="Marseille, France" class="recherche-area">
                         <input type="submit" value="Rechercher" class="recherche-bouton">
                         <div class="loupe">                            
-                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <i class="fa-solid fa-magnifying-glass">
+                                <input type="submit" value="" class="recherche-bouton2">
+                            </i>
                         </div>
             
                     </form>
