Finitions corrections détails

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
                                 <div class="hebergement_bloc_txt">
                                     <div>
-                                        <h3>hôtel de la mer</h3>
+                                        <h3>Hôtel de la mer</h3>
                                         <p>Nuit à partir de <strong>46€</strong></p>
                                     </div>
 
